# otpchat

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
cmake/: FindNCursesw.cmake
src/: address.c  address.h  args.c  args.h  block.c  block.h  chat.c  chat.h  command.c  command.h  key.c  key.h  main.c  message.c  message.h  net.c  net.h  node.c  node.h  ui.c  ui.h  user.c  user.h
